--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -364,6 +364,9 @@ body{
 	font-family: "OpenSans-Semibold";
 	font-size: 15px;
 	cursor: pointer;
+	&:hover{
+		background-color: rgba(0,0,0,.2);
+	}
 }
 
 .main_header__top_form-right_column {
