--- a/Style/main.css
+++ b/Style/main.css
@@ -372,6 +372,10 @@ body {
   cursor: pointer;
 }
 
+.header_button:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
 .main_header__top_form-right_column {
   width: 52%;
   display: -webkit-flex;
