--- a/Sass/queries.scss
+++ b/Sass/queries.scss
@@ -8,10 +8,10 @@
 	.main_body__top_social_line{
 		padding: 5px 20px;
 	}
-	.main_body__top_social_line-icon_block img{
-		width: 85%;
-		padding-left: 50px;
-	}
+	// .main_body__top_social_line-icon_block img{
+	// 	width: 85%;
+	// 	padding-left: 50px;
+	
 	.main_body__content_block_1-text_block{
 		padding-left: 40px;
 	}
