--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -189,6 +189,7 @@ $black: #000;
     100% {
         transform: rotate(90deg);
 		left: 10px;
+		
     }
 }
 /*-----------------------------------------------------------------------------------*/
@@ -365,12 +366,7 @@ body{
 	font-size: 15px;
 	cursor: pointer;
 	&:hover{
-<<<<<<< HEAD
 		background-color: rgba(0,0,0,.2);
-=======
-		background-color: rgba(0,0,0,.25);
-		border: 2px solid #bbb;
->>>>>>> master
 	}
 }
 
@@ -470,6 +466,16 @@ body{
 	display: flex;
 	align-items: center;
 	margin: 0 auto;
+	& img{
+		opacity: 0.5;
+		&:hover{
+			opacity: 0.8;
+		}
+	}
+	& a{
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 }
 
 .main_body__content_block_1-bg {
@@ -723,7 +729,7 @@ body{
 			position: absolute;
 			bottom: -30px;
 			left: 50%;
-			transform: translateX(-50%);
+			transform: translate(-50%, 0);
 			height: 2px;
 			width: 64px;
 			background-color: $orange;
@@ -1064,16 +1070,15 @@ body{
 	}
 }	
 footer{
-	height: 83px;
+	height: 50px;
 	background-color: #000;
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding-top: 5px;
+
 	& p{
 		
-		padding-top: 10px;
+
 		color: #fff;
 		@include OpenSansReg14;
 		font-size: 12px;
