--- a/Style/main.css
+++ b/Style/main.css
@@ -1609,6 +1609,13 @@ footer p {
   }
 }
 
+@media (max-width: 468px) {
+  .main_body__top_social_line-icon_block a {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
 @media (max-width: 390px) {
   .main_body__content_block_1-tabs {
     -webkit-align-self: flex-start;
